<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="202dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:background="#CDC9C9"
        android:paddingHorizontal="2dp"
        android:text="@string/app_user_name"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="291dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/button7"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/star_button_select"
        android:backgroundTint="#FFC107"


        android:text="@string/buttom_user_2"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/star_button_select"
        android:backgroundTint="#FF9800"
        android:shadowColor="#221717"
        android:text="@string/buttom_user_5"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:text="修改餐點" />

    <Button
        android:id="@+id/accset3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/star_button_select"
        android:backgroundTint="#FFB011"
        android:shadowColor="#221717"
        android:text="@string/buttom_user_4"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:text="帳號設定" />

    <Button
        android:id="@+id/button8"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/star_button_select"
        android:backgroundTint="#FF5722"
        android:text="@string/buttom_user_3"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

</androidx.constraintlayout.widget.ConstraintLayout>